--- a/sp/textos-clave/febres/index.html
+++ b/sp/textos-clave/febres/index.html
@@ -826,8 +826,8 @@ section.footer {
 <p>La gramátia competa se encuentra disponible a través de la biblioteca virtual del Beagle: <a href="http://darwin-online.org.uk/content/frameset?pageseq=1&amp;itemID=A709&amp;viewtype=text">Darwin Online</a></p>
 <p>El &ldquo;Calepino&rdquo; (Vocabulario) ha sido agregado al <a href="http://http://www.chandia.net/corlexim.cl/">CORLEXIM</a>.</p>
 <p>Aquí, presentamos versiones paralelas en mapudungun/castellano de los diálogos y de la Doctrina Cristiana.</p>
-<p><a href="https://benmolineaux.github.io/bookshelf/1765FEBRES-Dungulun.html">EPU GHÙLMEN GAÑI DUGULUN / Diálogo entre dos Caciques</a></p>
-<p><a href="https://benmolineaux.github.io/bookshelf/1765FEBRES-Coyaghtun.html">EXEMPLO DE UN COYAGHTUN</a></p>
+<p><a href="/bookshelf/1765FEBRES-Dungulun.html">EPU GHÙLMEN GAÑI DUGULUN / Diálogo entre dos Caciques</a></p>
+<p><a href="/bookshelf/1765FEBRES-Coyaghtun.html">EXEMPLO DE UN COYAGHTUN</a></p>
 <p><a href="https://benmolineaux.github.io/bookshelf/1765FEBR-3.html">Doctrina Christiana en Chilli Dugu</a></p>
 
 
