--- a/sp/textos-clave/havestadt/index.html
+++ b/sp/textos-clave/havestadt/index.html
@@ -832,6 +832,7 @@ section.footer {
 <p><em>VERSIÓN MAPUDUNGUN-ESPAÑOL DEL VOCABULARIO</em></p>
 <p>En el contexto del proyecto <strong>El Vocabulario Mapudungun Latín del padre Bernardo Havestadt (1777). Un aporte a nuestro conocimiento de la historia y la cultura mapuche</strong> Folio 496690, financiado por el <strong>Fondo del Libro y la Lectura</strong>, incluímos aquí <a href="https://benmolineaux.github.io/bookshelf/1777Havestadt-ParsQuarta-MAPU-SPA.html">una versión Mapudungun-Español del vocabulario de Havestadt (Pars Quarta)</a>.</p>
 <p>La traducción de las definiciones latinas de Havestadt al español fueron realizadas por <strong>Miguel Carmona Tabja</strong> y <strong>Constanza Martínez Gajardo</strong>, a quienes agradecemos encarecidamente la posibilidad de compartir este material.</p>
+<p>Agradecemos, además a Roberto Bahamonde Andrade por sus comentarios a la traducción del vocabulario.</p>
 
 
 <a href="/bookshelf/1777HAVE-Vocab.html" class="button">Pars Quarta (Vocabulario Mapudungun-Latín)</a>
