--- a/en/core-texts/havestadt/index.html
+++ b/en/core-texts/havestadt/index.html
@@ -834,6 +834,7 @@ section.footer {
 <p><em>MAPUDUNGUN-SPANISH VERSION OF HAVESTADT&rsquo;S VOCABULARY</em></p>
 <p>In the context of the project <strong>El Vocabulario Mapudungun Latín del padre Bernardo Havestadt (1777). Un aporte a nuestro conocimiento de la historia y la cultura mapuche</strong> Folio 496690, funded by Chile&rsquo;s <strong>Fondo del Libro y la Lectura</strong>, we include her <a href="https://benmolineaux.github.io/bookshelf/1777Havestadt-ParsQuarta-MAPU-SPA.html">a Mapudungun-Spanish version of Havestadt&rsquo;s vocabulary (Pars Quarta)</a>.</p>
 <p>The translation of Havestadt&rsquo;s definitions from Latin to Spanish are the work of <strong>Miguel Carmona Tabja</strong> and <strong>Constanza Martínez Gajardo</strong>, to whom we are enormously grateful for giving us the chance to share this material.</p>
+<p>We are also very grateful to Roberto Bahamonde Andrade for his comments on the Vocabulary&rsquo;s translation.</p>
 
 
 <a href="/bookshelf/1777HAVE-Vocab.html" class="button">Un-Tagged (Web – Vocabulary Mapudungun-Latin)</a>
