--- a/en/bonus-texts/manquilef2/index.html
+++ b/en/bonus-texts/manquilef2/index.html
@@ -19,8 +19,7 @@
 
     
 <meta name="description" content="Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)
-NOT Transcribed
-PDF Text (Image Scans) ">
+Transcribed Manuel Manquilef (1882&ndash;1950) was a Mapuche teacher, author and intellectual from the turn of the 20th century. Born in the province of Cautín, he attended the main highschool in Temuco, where he met Tomás de Guevara, who he collaborated with on his principal ethnographic works on the Mapuche. Indeed, it is possible that Guevara took much of Manquilef&rsquo;s work and published it under his own name.">
 
 <meta property="og:title" content="Manuel Manquilef: Comentarios del Pueblo Araucano II - Source material for the Corpus of Historical Mapudungun (CHM)">
 <meta property="og:type" content="article">
@@ -28,8 +27,7 @@ PDF Text (Image Scans) ">
 <meta property="og:image" content="https://benmolineaux.github.io/bookshelf/Manquilef2.png">
 <meta property="og:site_name" content="Source material for the Corpus of Historical Mapudungun (CHM)">
 <meta property="og:description" content="Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)
-NOT Transcribed
-PDF Text (Image Scans) ">
+Transcribed Manuel Manquilef (1882&ndash;1950) was a Mapuche teacher, author and intellectual from the turn of the 20th century. Born in the province of Cautín, he attended the main highschool in Temuco, where he met Tomás de Guevara, who he collaborated with on his principal ethnographic works on the Mapuche. Indeed, it is possible that Guevara took much of Manquilef&rsquo;s work and published it under his own name.">
 <meta property="og:locale" content="ja_JP">
 
 <meta name="twitter:card" content="summary_large_image">
@@ -37,8 +35,7 @@ PDF Text (Image Scans) ">
 <meta name="twitter:url" content="https://benmolineaux.github.io/bookshelf/en/bonus-texts/manquilef2/">
 <meta name="twitter:title" content="Manuel Manquilef: Comentarios del Pueblo Araucano II - Source material for the Corpus of Historical Mapudungun (CHM)">
 <meta name="twitter:description" content="Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)
-NOT Transcribed
-PDF Text (Image Scans) ">
+Transcribed Manuel Manquilef (1882&ndash;1950) was a Mapuche teacher, author and intellectual from the turn of the 20th century. Born in the province of Cautín, he attended the main highschool in Temuco, where he met Tomás de Guevara, who he collaborated with on his principal ethnographic works on the Mapuche. Indeed, it is possible that Guevara took much of Manquilef&rsquo;s work and published it under his own name.">
 <meta name="twitter:image" content="https://benmolineaux.github.io/bookshelf/Manquilef2.png">
 
 
@@ -73,7 +70,7 @@ PDF Text (Image Scans) ">
         "height": 60
       }
     },
-    "description": "Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)\nNOT Transcribed\nPDF Text (Image Scans) "
+    "description": "Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)\nTranscribed Manuel Manquilef (1882\u0026ndash;1950) was a Mapuche teacher, author and intellectual from the turn of the 20th century. Born in the province of Cautín, he attended the main highschool in Temuco, where he met Tomás de Guevara, who he collaborated with on his principal ethnographic works on the Mapuche. Indeed, it is possible that Guevara took much of Manquilef\u0026rsquo;s work and published it under his own name."
   }
 </script>
 
@@ -817,9 +814,13 @@ section.footer {
   
 
   <div class="article-body"><p>Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)</p>
-<p><em>NOT Transcribed</em></p>
+<p><em>Transcribed</em>
+Manuel Manquilef (1882&ndash;1950) was a Mapuche teacher, author and intellectual from the turn of the 20th century. Born in the province of Cautín, he attended the main highschool in Temuco, where he met <em>Tomás de Guevara</em>, who he collaborated with on his principal ethnographic works on the Mapuche. Indeed, it is possible that Guevara took much of Manquilef&rsquo;s work and published it under his own name.</p>
+<p>Manquilef went on to obtain his teaching degree in Chillán, returning to work at the Liceo, in Temuco. He is the first Mapuche intellectual to publish, under his own name, on topics to do with his own language and culture, in Mapudungun-Spanish bilingual editions. A great admirer of <em>Rudolf Lenz</em> his work is modelled on the German scholar&rsquo;s <a href="https://benmolineaux.github.io/bookshelf/core-texts/lenzestudios/">Estudios Araucanos</a> (1895-1897).</p>
+<p>Both of his published studies are entitled <em>Comentarios del Pueblo Araucano</em> (Commentaries on the Araucanian People), the first, with the subtitle &lsquo;La Faz Social&rsquo; (Social aspects) and the second &lsquo;La Jimnasia Nacional (Juegos, Ejercicios y Bailes)&rsquo; (National Gymnastics: Games, Exercises and Dances). They were published in the Annals of the University of Chile and contain rich ethnographic details on the life of the Mapuche at the turn of the century.</p>
 
 
+<a href="/bookshelf/1914MANQ.html" class="button">Un-Tagged Text (Web)</a>
 <a href="/bookshelf/Manquilef2.pdf" class="button">PDF Text (Image Scans)</a>
 
 </div>
