--- a/en/index.html
+++ b/en/index.html
@@ -831,8 +831,7 @@ The tale follows the fortunes of Pishmahuile, an extrordinary player of chueca o
             </ul>
 
     <element hidden>      <div class="summary">Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)
-NOT Transcribed
-PDF Text (Image Scans) </div></element>  
+Transcribed Manuel Manquilef (1882&ndash;1950) was a Mapuche teacher, author and intellectual from the turn of the 20th century. Born in the province of Cautín, he attended the main highschool in Temuco, where he met Tomás de Guevara, who he collaborated with on his principal ethnographic works on the Mapuche. Indeed, it is possible that Guevara took much of Manquilef&rsquo;s work and published it under his own name.</div></element>  
           </div>
         </a>
       </article>
