--- a/sp/textos-adicionales/manquilef2/index.html
+++ b/sp/textos-adicionales/manquilef2/index.html
@@ -19,8 +19,7 @@
 
     
 <meta name="description" content="Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)
-NOT Transcribed
-PDF Text (Image Scans) ">
+Transcribed Manuel Manquilef (1882&ndash;1950) fue un profesor autor, e intellectual mapuche que se desempeñó en el entresiglo pasado. Nacido en la provincia de Cautín, fue alumno del Liceo de Temuco, conoció a Tomás de Guevara, en cuyas obras etnográficas principales habría de colaborar. De hecho, se podría decir que Guevara tomo gran parte del trabajo y conocimiento de Manquilef para publicarlo bajo su nombre.">
 
 <meta property="og:title" content="Manuel Manquilef: Comentarios del Pueblo Araucano II - Fuentes para el Corpus Histórico del Mapudungun (CHM)">
 <meta property="og:type" content="article">
@@ -28,8 +27,7 @@ PDF Text (Image Scans) ">
 <meta property="og:image" content="https://benmolineaux.github.io/bookshelf/Manquilef2.png">
 <meta property="og:site_name" content="Fuentes para el Corpus Histórico del Mapudungun (CHM)">
 <meta property="og:description" content="Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)
-NOT Transcribed
-PDF Text (Image Scans) ">
+Transcribed Manuel Manquilef (1882&ndash;1950) fue un profesor autor, e intellectual mapuche que se desempeñó en el entresiglo pasado. Nacido en la provincia de Cautín, fue alumno del Liceo de Temuco, conoció a Tomás de Guevara, en cuyas obras etnográficas principales habría de colaborar. De hecho, se podría decir que Guevara tomo gran parte del trabajo y conocimiento de Manquilef para publicarlo bajo su nombre.">
 <meta property="og:locale" content="ja_JP">
 
 <meta name="twitter:card" content="summary_large_image">
@@ -37,8 +35,7 @@ PDF Text (Image Scans) ">
 <meta name="twitter:url" content="https://benmolineaux.github.io/bookshelf/sp/textos-adicionales/manquilef2/">
 <meta name="twitter:title" content="Manuel Manquilef: Comentarios del Pueblo Araucano II - Fuentes para el Corpus Histórico del Mapudungun (CHM)">
 <meta name="twitter:description" content="Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)
-NOT Transcribed
-PDF Text (Image Scans) ">
+Transcribed Manuel Manquilef (1882&ndash;1950) fue un profesor autor, e intellectual mapuche que se desempeñó en el entresiglo pasado. Nacido en la provincia de Cautín, fue alumno del Liceo de Temuco, conoció a Tomás de Guevara, en cuyas obras etnográficas principales habría de colaborar. De hecho, se podría decir que Guevara tomo gran parte del trabajo y conocimiento de Manquilef para publicarlo bajo su nombre.">
 <meta name="twitter:image" content="https://benmolineaux.github.io/bookshelf/Manquilef2.png">
 
 
@@ -73,7 +70,7 @@ PDF Text (Image Scans) ">
         "height": 60
       }
     },
-    "description": "Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)\nNOT Transcribed\nPDF Text (Image Scans) "
+    "description": "Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)\nTranscribed Manuel Manquilef (1882\u0026ndash;1950) fue un profesor autor, e intellectual mapuche que se desempeñó en el entresiglo pasado. Nacido en la provincia de Cautín, fue alumno del Liceo de Temuco, conoció a Tomás de Guevara, en cuyas obras etnográficas principales habría de colaborar. De hecho, se podría decir que Guevara tomo gran parte del trabajo y conocimiento de Manquilef para publicarlo bajo su nombre."
   }
 </script>
 
@@ -817,9 +814,13 @@ section.footer {
   
 
   <div class="article-body"><p>Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)</p>
-<p><em>NOT Transcribed</em></p>
+<p><em>Transcribed</em>
+Manuel Manquilef (1882&ndash;1950) fue un profesor autor, e intellectual mapuche que se desempeñó en el entresiglo pasado. Nacido en la provincia de Cautín, fue alumno del Liceo de Temuco, conoció a <em>Tomás de Guevara</em>, en cuyas obras etnográficas principales habría de colaborar. De hecho, se podría decir que Guevara tomo gran parte del trabajo y conocimiento de Manquilef para publicarlo bajo su nombre.</p>
+<p>Manquilef eventualmente obtuvo el grado de profesor, estudiando en la Escuela Normal de Chillán y volvió a trabajar en el Liceo de Temuco. Es el primer intelectual mapuche en publicar, bajo su propio nombre, sobre temas de lengua y cultura, en ediciones bilingues mapudungun-español. Siendo un gran admirador de <em>Rudolf Lenz</em>, sus obras se modelan sobre los <a href="https://benmolineaux.github.io/bookshelf/core-texts/lenzestudios/">Estudios Araucanos</a> (1895-1897) del lingüista germano-chileno.</p>
+<p>Sus dos trabajos originales, sobre etnografía mapuche, se titulan <em>Comentarios del Pueblo Araucano</em>. El primero, con subtitulo &lsquo;La Faz Social&rsquo; y el segondo con el subtítulo &lsquo;La Jimnasia Nacional (Juegos, Ejercicios y Bailes)&rsquo; se publicaron en los Anales de la University of Chile, editados por Lenz. Contienen una gran riqueza de detalle sobre la vida y costumbres the Mapuche durante el cambio de siglo.</p>
 
 
+<a href="/bookshelf/1914MANQ.html" class="button">Un-Tagged Text (Web)</a>
 <a href="/bookshelf/Manquilef2.pdf" class="button">PDF Text (Image Scans)</a>
 
 </div>
