--- a/sp/textos-adicionales/manquilef2/index.html
+++ b/sp/textos-adicionales/manquilef2/index.html
@@ -820,8 +820,8 @@ Manuel Manquilef (1882&ndash;1950) fue un profesor autor, e intellectual mapuche
 <p>Sus dos trabajos originales, sobre etnografía mapuche, se titulan <em>Comentarios del Pueblo Araucano</em>. El primero, con subtitulo &lsquo;La Faz Social&rsquo; y el segondo con el subtítulo &lsquo;La Jimnasia Nacional (Juegos, Ejercicios y Bailes)&rsquo; se publicaron en los Anales de la University of Chile, editados por Lenz. Contienen una gran riqueza de detalle sobre la vida y costumbres the Mapuche durante el cambio de siglo.</p>
 
 
-<a href="/bookshelf/1914MANQ.html" class="button">Un-Tagged Text (Web)</a>
-<a href="/bookshelf/Manquilef2.pdf" class="button">PDF Text (Image Scans)</a>
+<a href="/bookshelf/1914MANQ.html" class="button">Text transcrito (Web)</a>
+<a href="/bookshelf/Manquilef2.pdf" class="button">PDF en imágenes</a>
 
 </div>
   <footer class="article-footer">
