--- a/sp/index.html
+++ b/sp/index.html
@@ -831,7 +831,7 @@ Este es un cuento tradicional mapuche recopilado por el sacerdote capuchino Sigi
             </ul>
 
     <element hidden>      <div class="summary">Subtitle: Jimnasia Nacional (Juegos, Ejercicios y Bailes)
-Transcribed Manuel Manquilef (1882&ndash;1950) fue un profesor autor, e intellectual mapuche que se desempeñó en el entresiglo pasado. Nacido en la provincia de Cautín, fue alumno del Liceo de Temuco, conoció a Tomás de Guevara, en cuyas obras etnográficas principales habría de colaborar. De hecho, se podría decir que Guevara tomo gran parte del trabajo y conocimiento de Manquilef para publicarlo bajo su nombre.</div></element>  
+Transcrito Manuel Manquilef (1882&ndash;1950) fue un profesor autor, e intellectual mapuche que se desempeñó en el entresiglo pasado. Nacido en la provincia de Cautín, fue alumno del Liceo de Temuco, conoció a Tomás de Guevara, en cuyas obras etnográficas principales habría de colaborar. De hecho, se podría decir que Guevara tomo gran parte del trabajo y conocimiento de Manquilef para publicarlo bajo su nombre.</div></element>  
           </div>
         </a>
       </article>
