febres update typos

--- a/en/core-texts/febres/index.html
+++ b/en/core-texts/febres/index.html
@@ -826,12 +826,12 @@ section.footer {
 <p>The entire grammar is available through the Online Beagle Library at <a href="http://darwin-online.org.uk/content/frameset?pageseq=1&amp;itemID=A709&amp;viewtype=text">Darwin Online</a></p>
 <p>The &ldquo;Calepino&rdquo; (Vocabulary) available as part of <a href="http://corlexim.cl/">CORLEXIM</a>.</p>
 <p>Here, we present a parallel Mapundungun/Spanish transcription of the informal and formal dialogues as well as the the Christian Doctrine.</p>
-<p><a href="https://benmolineaux.github.io/bookshelf/1765Febres-Dungulun.html">EPU GHÙLMEN GAÑI DUGULUN / Diálogo entre dos Caciques</a> &ldquo;Dialogue of two chiefs&rdquo;</p>
+<p><a href="/bookshelf/1765FEBRES-Dungulun.html">EPU GHÙLMEN GAÑI DUGULUN / Diálogo entre dos Caciques</a> &ldquo;Dialogue of two chiefs&rdquo;</p>
 <p><a href="https://benmolineaux.github.io/bookshelf/1765FEBRES-Coyaghtun.html">EXEMPLO DE UN COYAGHTUN</a> &ldquo;Example of a coyagtun (formal speech/dialogue)&rdquo;</p>
 <p><a href="https://benmolineaux.github.io/bookshelf/1765FEBR-3.html">Doctrina Christiana en Chilli Dugu</a>&ldquo;Christian Doctrine in Chillidungu (i.e. the Speech of Chile)&rdquo;</p>
 
 
-<a href="/bookshelf/1765Febres-Dungulun.html" class="button">Un-Tagged Text (Dialogue – Web)</a>
+<a href="/bookshelf/1765FEBRES-Dungulun.html" class="button">Un-Tagged Text (Dialogue – Web)</a>
 <a href="/bookshelf/1765FEBRES-Coyaghtun.html" class="button">Un-Tagged Text (Formal Speech – Web)</a>
 <a href="/bookshelf/1765FEBR-3.html" class="button">Un-Tagged Text (Christian Doctrine – Web)</a>
 <a href="/bookshelf/Febres.pdf" class="button">PDF Text (Image Scans)</a>
