--- a/sp/index.html
+++ b/sp/index.html
@@ -1615,6 +1615,14 @@ Durante su estadía en el &ldquo;Reyno de Chile&rdquo;, Valdiva no sólo se invo
 
 
 
+            
+<section class="sidebar">
+  <header>How to cite / Cómo citar</header>
+  <div class="author">
+    <div class="author-description">Molineaux, Benjamin (ed.) 2023. Fuentes para el Corpus Histórico del Mapudungun/Source material for the Corpus of Historical Mapudungun. URL: https://benmolineaux.github.io/bookshelf/. FECHA/DATE.</div>
+  </div>
+</section>
+
           </aside>
         </div>
       </div> 
