--- a/en/bonus-texts/cox/index.html
+++ b/en/bonus-texts/cox/index.html
@@ -1218,6 +1218,14 @@ section.footer {
 
 
 
+            
+<section class="sidebar">
+  <header>How to cite / Cómo citar</header>
+  <div class="author">
+    <div class="author-description">Molineaux, Benjamin (ed.) 2023. Fuentes para el Corpus Histórico del Mapudungun/Source material for the Corpus of Historical Mapudungun. URL: https://benmolineaux.github.io/bookshelf/. FECHA/DATE.</div>
+  </div>
+</section>
+
           </aside>
         </div>
       </div> 
