--- a/en/bonus-texts/manquilef2/index.html
+++ b/en/bonus-texts/manquilef2/index.html
@@ -1219,6 +1219,14 @@ Manuel Manquilef (1882&ndash;1950) was a Mapuche teacher, author and intellectua
 
 
 
+            
+<section class="sidebar">
+  <header>How to cite / Cómo citar</header>
+  <div class="author">
+    <div class="author-description">Molineaux, Benjamin (ed.) 2023. Fuentes para el Corpus Histórico del Mapudungun/Source material for the Corpus of Historical Mapudungun. URL: https://benmolineaux.github.io/bookshelf/. FECHA/DATE.</div>
+  </div>
+</section>
+
           </aside>
         </div>
       </div> 
