--- a/en/core-texts/augustalecturas/index.html
+++ b/en/core-texts/augustalecturas/index.html
@@ -1231,6 +1231,14 @@ The texts collected by Augusta are mostly from the Lafkenche region near Lake Bu
 
 
 
+            
+<section class="sidebar">
+  <header>How to cite / Cómo citar</header>
+  <div class="author">
+    <div class="author-description">Molineaux, Benjamin (ed.) 2023. Fuentes para el Corpus Histórico del Mapudungun/Source material for the Corpus of Historical Mapudungun. URL: https://benmolineaux.github.io/bookshelf/. FECHA/DATE.</div>
+  </div>
+</section>
+
           </aside>
         </div>
       </div> 
