--- a/sp/textos-clave/lenzestudios/index.html
+++ b/sp/textos-clave/lenzestudios/index.html
@@ -1220,6 +1220,14 @@ These constitute some of the first real samples of authentic Mapuche speech, as 
 
 
 
+            
+<section class="sidebar">
+  <header>How to cite / Cómo citar</header>
+  <div class="author">
+    <div class="author-description">Molineaux, Benjamin (ed.) 2023. Fuentes para el Corpus Histórico del Mapudungun/Source material for the Corpus of Historical Mapudungun. URL: https://benmolineaux.github.io/bookshelf/. FECHA/DATE.</div>
+  </div>
+</section>
+
           </aside>
         </div>
       </div> 
