--- a/sp/textos-clave/valdiviagramatica/index.html
+++ b/sp/textos-clave/valdiviagramatica/index.html
@@ -1210,6 +1210,14 @@ Su autor es el padre Luys de Valdivia, uno los miembros fundadores de la Misión
 
 
 
+            
+<section class="sidebar">
+  <header>How to cite / Cómo citar</header>
+  <div class="author">
+    <div class="author-description">Molineaux, Benjamin (ed.) 2023. Fuentes para el Corpus Histórico del Mapudungun/Source material for the Corpus of Historical Mapudungun. URL: https://benmolineaux.github.io/bookshelf/. FECHA/DATE.</div>
+  </div>
+</section>
+
           </aside>
         </div>
       </div> 
