--- a/en/core-texts/febres/index.html
+++ b/en/core-texts/febres/index.html
@@ -831,8 +831,8 @@ section.footer {
 <p><a href="https://benmolineaux.github.io/bookshelf/1765FEBR-3.html">Doctrina Christiana en Chilli Dugu</a>&ldquo;Christian Doctrine in Chillidungu (i.e. the Speech of Chile)&rdquo;</p>
 
 
-<a href="/bookshelf/1765FEBRES-Dungulun.html" class="button">Un-Tagged Text (Dialogue – Web)</a>
-<a href="/bookshelf/1765FEBRES-Coyaghtun.html" class="button">Un-Tagged Text (Formal Speech – Web)</a>
+<a href="/bookshelf/1765FEBRES-Dungulun.html" class="button">Tagged Text (Dialogue – Web)</a>
+<a href="/bookshelf/1765FEBRES-Coyaghtun.html" class="button">Tagged Text (Formal Speech – Web)</a>
 <a href="/bookshelf/1765FEBR-3.html" class="button">Un-Tagged Text (Christian Doctrine – Web)</a>
 <a href="/bookshelf/Febres.pdf" class="button">PDF Text (Image Scans)</a>
 <a href="/bookshelf/1765Febres.txt" class="button">TXT Text (Mapudungun)</a>
