--- a/sp/textos-clave/index.html
+++ b/sp/textos-clave/index.html
@@ -993,7 +993,7 @@ El jesuita alemán Bernhard Havestadt (1714-1778) fue el autor de una de las dos
             </ul>
 
     <element hidden>      <div class="summary">Transcrito
-Esta fue la obra temprana de mayor circulación sobre el mapudungun. Tanto así que el HMS Beagle en su famosa circumnavegación de 1831&ndash;1836 a cargo del Capitán Fitz Roy, llevaba una copia a bordo, junto al joven Charles Darwin.
+Esta fue la obra temprana de mayor circulación sobre el mapudungun. Tanto así que el HMS Beagle en su famosa circunnavegación de 1831&ndash;1836 a cargo del Capitán Fitz Roy, llevaba una copia a bordo, junto al joven Charles Darwin.
 Su autor es el jesuita catalán Andrés Febres (1732&ndash;1790), que llegó al Wallmapu (territorio mapuche) en 1759, a sus 27 años. Llama la atención que el misionero aprendió la lengua, escribió y publicó su gramática en menos de cinco años desde su arribo.</div></element>  
           </div>
         </a>
