--- a/VC.html
+++ b/VC.html
@@ -2868,10 +2868,9 @@
             <td width="7%">root</td>
             <td width="7%">michun</td>
             <td width="7%">cat       </td>
-            <td width="30%"> / potentially 'It is likely that there was a transcription error, with 'michun' actually
-               corresponding to the word 'cat', a Spanish borrowing and the equivalent for calf missing
-               altogether. DLC gives the Latin 'felis' (cat). RBA suggests that the confusion may
-               arise from the Dutch 'katt' was read as 'kalf'.</td>
+            <td width="30%"> / It is likely that there was a transcription error, with 'michun' actually corresponding
+               to the word 'cat', a Spanish borrowing. DLC gives the Latin 'felis' (cat). RBA suggests
+               that the confusion may arise from the Dutch 'katt' being read as 'kalf'.</td>
          </tr>
          <tr>
             <td width="7%" style="background-color:#cce2cc;">202.
